<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>rotary_encoder_odometry</name>
  <version>0.0.0</version>
  <description>A package used for taking raw rotary encoder values and mapping it to 1d odometry </description>
  <maintainer email="andrewmjohnson549@gmail.com">Andrew Johnson</maintainer>
  <license>Apacje</license>

  <depend>rclpy</depend>
  <depend>std_msgs</depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
